More itinerary formatting + inline into existing section in HTML

--- a/src/_includes/markdown-block.njk
+++ b/src/_includes/markdown-block.njk
@@ -5,12 +5,14 @@
 {% set containerClasses = containerClasses or "max-w-2xl mx-auto" %}
 
 {% set proseClasses = proseClasses or
-  "prose prose-lg \
+  "prose prose-md \
    prose-headings:font-heading \
    prose-headings:text-brand-red \
+   prose-h1:leading-tight \
+   prose-h2:leading-tight \
    prose-p:text-brand-red \
-   prose-li:text-brand-red \
    prose-p:leading-snug \
+   prose-li:text-brand-red \
    prose-li:leading-tight \
    prose-li:marker:text-brand-red \
    prose-strong:text-brand-red prose-strong:font-semibold \
